<resources>
    <string name="app_name">BPcontrol</string>
    <string name="action_settings">Settings</string>
    <string name="homegrid_graphics">Evolution</string>
    <string name="homegrid_pressure">Add pressures</string>
    <string name="homegrid_messages">Messages</string>
    <string name="homegrid_videos">Videos</string>
    <string name="menusection_preassures">Arterial Pressures</string>
    <string name="menuprincipal">Home</string>
    <string name="menusection_history">Patient History</string>
    <string name="menusection_centers">Health Centers</string>
    <string name="menusection_contact">Contact</string>
    <string name="menusection_evolution">Evolution</string>
    <string name="menusection_help">Help</string>
    <string name="menuperfil">Profile</string>
    <string name="menuothersitem">Attributions</string>
    <string name="menuheadersection">Sections</string>
    <string name="menuheadersocial">Social</string>
    <string name="menuheaderothers">Others</string>
    <string name="principalmenutext">Principal Menu</string>
    <string name="perfilheaderbar" translatable="false">Profile</string>
    <string name="hometab">Start</string>
    <string name="centerstab">Centers</string>
    <string name="helptab">Info</string>
    <string name="registerAccess">Patient area access</string>
    <string name="infosendregistertlf">Confirm the prefix of your country and enter your phone number.</string>
    <string name="tlfhint">Enter mobile number</string>
    <string name="smshint">Enter SMS code</string>
    <string name="sendtlfregisterheader">REGISTER - STEP 1</string>
    <string name="sendcoderegisterheader">REGISTER - STEP 2</string>
    <string name="sendphonenumber">Send</string>
    <string name="errorprefixnumber">The number or prefix entered is incorrect</string>
    <string name="acceptError">OK</string>
    <string name="entercodemessage">If the entered number is correct , before long you will receive an SMS with the code on your device. Enter it.</string>
    <string name="codeToHomeButton">Register</string>
    <string name="licenseheader">LICENSE</string>
    <string name="license">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc,</string>
    <string name="licenseButtonAccept">Accept</string>
    <string name="licenseButtonCancel">Cancel</string>
    <string name="codeError">This code does not correspond to the phone number entered previously. Ensure that the phone number and code are correct.</string>
    <string name="codeLengthError">The code is incorrect. This has to have a length of 4 letters or numbers.</string>
    <string name="exitHome">Do you want to exit the application?</string>
    <string name="exitokbutton">Exit</string>
    <string name="exitCancelButton">Cancel</string>
    <string name="completename">Name and surname:</string>
    <string name="identitycard">Identity card:</string>
    <string name="profileemail">E-mail:</string>
    <string name="birthdate">Birth date:</string>
    <string name="lastupdate">Lastest introduced pressures:</string>
    <string name="town">Location:</string>
    <string name="mobileNumber">Phone number:</string>
    <string name="datecreated">Follow up since:</string>
    <string name="problemcontactprofile">If there is any problem with the data, please contact us:</string>
    <string name="contacttext">For any questions , contact us</string>
    <string name="sendmailcontact">Send</string>
    <string name="subjectmail">Subject</string>
    <string name="chooser">Choose an email client from...</string>
    <string name="mailbody">Message body</string>
    <string name="dialogcontact">You have no mail client configured on this device. Sets one or contact us via phone</string>
    <string name="emptyemail">Fields mail are required</string>
    <string name="noconnectiondialog">The internet connection is not available, connect to and press OK</string>
    <string name="noconnectiondialogpositive">OK</string>
    <string name="noconnectiondialognegative">Exit</string>
    <string name="noconnectiondialogWS">There are problems connecting to servers, try again later</string>
    <string name="noconnectiondialogpositiveWS">OK</string>
    <string name="headerpressures">Pressures</string>
    <string name="pressuresmsg">Enter your daily pressures-three measurements per time slot</string>
    <string name="systolic">Systolic</string>
    <string name="diastolic">Diastolic</string>
    <string name="pulse">Pulse</string>
    <string name="sendpreassure">Send</string>
    <string name="savepreassure">Save</string>
    <string name="pressuressfirsttimetext">MORNING (6-9 hours):</string>
    <string name="pressuressecondtimetext">AFTERNOON (18-21 hours):</string>
    <string name="dialogaccpet">Accept</string>
    <string name="dialogcancel">Cancel</string>
    <string name="dialogdiastolic">Enter your diastolic blood pressure</string>
    <string name="dialogsystolic">Enter your systolic blood pressure</string>
    <string name="dialogpulse">Enter your pulse</string>
    <string name="savebutton">Save</string>
    <string name="loadbutton">Load</string>
    <string name="emptysavemessage">To save the data need to fill in all fields for this time slot</string>
    <string name="messagesend">To send pressures have to fill both slots. If only one , click save button to save the pressures of a slot button.</string>
    <string name="saveddata">Data correctly saved</string>
    <string name="pressuresendproblems">There are problems sending pressures, try again later</string>
    <string name="sentpressuresOK">Pressures have been sent successfully\n</string>
    <string name="videoavailable">New video is available in Videos section</string>
    <string name="headerbaryoutube">Videos</string>
    <string name="youtubenovideos">There are no videos available to display.</string>
    <string name="headerbarhistory">History</string>
    <string name="psystolicheader">Diastolic p.</string>
    <string name="pdiastolicheader">Systolic p.</string>
    <string name="pulseheader">Pulse</string>
    <string name="fetle">Fetle</string>
    <string name="messages">Messages</string>
    <string-array name="months">
    <item>January</item>
    <item>February</item>
    <item>March</item>
    <item>April</item>
    <item>May</item>
    <item>June</item>
    <item>July</item>
    <item>August</item>
    <item>September</item>
    <item>October</item>
    <item>November</item>
    <item>December</item>
    </string-array>
    <string name="nopressurehistory">There is not record in history</string>
    <string name="pressuresintroduced">The pressures of today have already been introduced</string>
    <string name="historydialogbutton">OK</string>
    <string name="welcome">Welcome</string>
    <string name="homedescription1">You take</string>
    <string name="singularday">day</string>
    <string name="pluralday">days</string>
    <string name="homedescription12">without sending your measurements</string>
    <string name="homedescription2">Well, take measurements a day!</string>
    <string name="notregister">There are not activity records</string>
    <string name="graphdescriptionsyctolic">Systolic pressure (day average)</string>
    <string name="graphdescriptiondiastolic">Diastolic pressure (day average)</string>
    <string name="graphdescriptionpulse">Pulse(day average)</string>
    <string name="graphdescriptionheader1">Systolic pressures plot</string>
    <string name="graphdescriptionheader2">Diastolic pressures plot</string>
    <string name="graphdescriptionheader3">Pulses plot</string>
    <string name="plotmenucase1">Show one month graphic</string>
    <string name="plotmenucase2">Show three month graphic</string>
    <string name="plotmenucase3">Show six month graphic</string>
    <string name="plotmenucase4">Show custom graphic</string>
    <string name="plotcancel">Back to the principal menu</string>
    <string name="plotcasestitle">Choose someone option:</string>
    <string name="chooseinitialdate">Choose the initial date</string>
    <string name="choosefinaldate">Choose the final date</string>
    <string name="buttondialogaccept">Accept</string>
    <string name="writemessage">Write a message</string>
    <string name="title_activity_maps">Map</string>
    <string name="activategps">App needs GPS enable for maps and location</string>
    <string name="canceldialogloc">Cancel</string>
    <string name="Enable">Activate</string>
    <string name="distance">Distance:</string>
    <string name="locationalert">Location alert</string>
    <string name="errorgettingpoint">Error getting points</string>
    <string name="enabledialogloc">Activate</string>
    <string name="mapactheader">Map</string>
    <string name="mapdialogtitle">Choose map type</string>
    <string-array name="maptypes">
        <item>Hybrid</item>
        <item>Normal</item>
        <item>Satellite</item>
        <item>Terrain</item>

    </string-array>
    <string name="headerattributions">Attributions</string>
    <string name="principalmenuiconmenssage">Principal menu icon created by Amit Jakhu</string>
    <string name="principalmenuiconmenssage2">under license CC BY 3.0, downloaded from </string>
    <string name="icons8url">www.icons8.com</string>
    <string name="maptypeicons">Map type icon is created by Icons8</string>
    <string name="maptypeicons2">under license CC BY 3.0, downloaded from</string>
    <string name="freepikurl">www.freepik.com</string>
    <string name="lateralmenu">The rest of icons are created by Freepik </string>
    <string name="pressurehelp1">To add your daily pressures , you have to go to paragraph blood pressures or directly from the shortcut on the main menu " Add pressures."\n\nThe pressure screen consists of two parts , add measurements in the morning and afternoon add measurements .</string>
    <string name="pressurehelp2">Each line of empty fields represents a measurement(systolic pressure , diastolic pressure and pulse).</string>
    <string name="pressurehelp3">When each strip is complete with its 3 measurements corresponding can save your settings , this way you can save Fringe morning to send 2 slots for the evening when the Gaza evening is completed and this all ready . You can switch from one band to another without the content always clear that they do not exit the application without saving data \n \n <b> NOTE : </b> In a band you can save your settings as long as are entered 3 measurements. CAN SEND ONLY WHEN RESULTS ARE TWO FULL STRIP .</string>
    <string name="pressuretitlehelp">Enter measurements per time slot</string>
</resources>