<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <com.hesoftgroup.bpcontrol.customviews.RobotoTextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginbottommail"
            android:layout_marginBottom="@dimen/marginbottommail"
            android:gravity="center"
            android:text="@string/contacttext"
            android:textColor="@color/menutext"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <com.hesoftgroup.bpcontrol.customviews.BPEditText
            android:id="@+id/subject"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:textColor="@color/menutext"
            android:layout_margin="@dimen/marginbottommail"
            android:ems="10"
            android:hint="@string/subjectmail" />

        <com.hesoftgroup.bpcontrol.customviews.BPEditText
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginbottommail"
            android:ems="10"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/menutext"
            android:hint="@string/mailbody" />

        <Button
            android:id="@+id/sendEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            style="@style/patientAreaButtonStyle"
            android:text="@string/sendmailcontact" />

    </LinearLayout>

</ScrollView>

</RelativeLayout>