<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/header"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:weightSum="4"
        android:gravity="center_vertical"
        android:background="@color/cellheadercolor">

        <com.android.bpcontrol.customviews.RobotoTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/fetle"
            android:tag="RobotoBold"
            android:textColor="@color/menutext"/>

        <com.android.bpcontrol.customviews.RobotoTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:tag="RobotoBold"
            android:text="@string/psystolicheader"
            android:textColor="@color/menutext"/>

        <com.android.bpcontrol.customviews.RobotoTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:tag="RobotoBold"
            android:gravity="center"
            android:text="@string/pdiastolicheader"
            android:textColor="@color/menutext"/>

        <com.android.bpcontrol.customviews.RobotoTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:tag="RobotoBold"
            android:text="@string/pulse"
            android:textColor="@color/menutext"/>

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/listresultadosparent"
        android:layout_below="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="@dimen/margintablelateral"
        android:layout_marginBottom="@dimen/margintablelatopbottom"
        android:layout_marginLeft="@dimen/margintablelateral">
        <ListView
            android:id="@+id/resultados_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:background="@color/graybp"
            android:fadingEdge="none"
            />

    </RelativeLayout>


</RelativeLayout>