<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.hesoftgroup.bpcontrol.customviews.RobotoTextView
        android:id="@+id/infomessageregister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopForActionbar"
        android:gravity="center"
        android:tag="RobotoBold"
        android:text="@string/infosendregistertlf"
        android:textColor="@color/menutext"
        android:textSize="@dimen/infotextsize"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:id="@+id/edittextlinearlayout"
        android:layout_below="@+id/infomessageregister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopEdittextRegister"
        android:orientation="horizontal"
        android:gravity="center"
       >

        <com.hesoftgroup.bpcontrol.customviews.BPEditText
            android:id="@+id/tlfprefix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/menutext"
            android:text="34"
            android:minEms="2"
            android:maxLength="2"
            android:inputType="number"
            android:textSize="@dimen/telephonetextsize"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="@dimen/marginleft"
            />

        <com.hesoftgroup.bpcontrol.customviews.BPEditText
            android:id="@+id/tlfnumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/menutext"
            android:minEms="6"
            android:textSize="@dimen/telephonetextsize"
            android:maxLength="9"
            android:layout_gravity="center_horizontal"
            android:inputType="number"
            android:hint="@string/tlfhint"

            />

        </LinearLayout>


        <Button
            android:id="@+id/accesToSMScode"
            android:layout_below="@+id/edittextlinearlayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTopEdittextRegister"
            style="@style/patientAreaButtonStyle"
            android:text="@string/sendphonenumber"
            android:layout_centerHorizontal="true"
        />

</RelativeLayout>